[gd_scene load_steps=2 format=2]

[ext_resource path="res://nodes_parts/generic_types_menu.gd" type="Script" id=1]

[node name="Control" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypesNameOptions" type="OptionButton" parent="."]
margin_right = 1200.0
margin_bottom = 720.0
size_flags_horizontal = 3

[node name="TypeNameInput" type="LineEdit" parent="."]
visible = false
margin_left = 602.0
margin_right = 1200.0
margin_bottom = 720.0
size_flags_horizontal = 3
expand_to_text_length = true

[node name="CheckButton" type="CheckButton" parent="."]
margin_left = 1204.0
margin_right = 1280.0
margin_bottom = 720.0

[connection signal="item_selected" from="TypesNameOptions" to="." method="_on_TypesNameOptions_item_selected"]
[connection signal="focus_exited" from="TypeNameInput" to="." method="_on_TypeNameInput_focus_exited"]
[connection signal="text_entered" from="TypeNameInput" to="." method="_on_TypeNameInput_text_entered"]
[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]
